# molecule

./: CMakeLists.txt
res/: 1330.ins  FCC3.ORT  FCC5.ORT  c240.ort  c60.ort  c70.ort  c80.ort  c84.ort  circulen.ins  circulen.ort  f18.ins  f18.ort  f36.ort  f48.ort  fcc.ort  fcc2.ort  fcc4.ort  icos1.ort  icos2.ort  icos3.ort  icos5.ort  scary.ins  schw33.ins  schw44.ins  tria.ins
src/: '  atomColours.h  atomValues.cpp  main.cpp
src/Atom/: Atom.cpp  Atom.h  draw.cpp  getDrawingRadiuse.cpp  printBounds.cpp  project.cpp  visible.cpp
src/Bond/: Bond.cpp  Bond.h  draw.cpp
src/Engine/: Engine.cpp  Engine.h  input.cpp  start.cpp  toScreenCoords.cpp
src/Matrix/: Matrix.cpp  Matrix.h  rotation.cpp  unit.cpp
src/Molecule/: Molecule.cpp  Molecule.h  applyCell.cpp  applySymms.cpp  canBind.cpp  draw.cpp  generateBonds.cpp  generateSymms.cpp  getAtoms.cpp  getZAtoms.cpp  insert.cpp  load.cpp  printData.cpp  sortZ.cpp
src/Symm/: Symm.cpp  Symm.h  apply.cpp
src/vec/: vec.cpp  vec.h
